[tool.poetry]
name = "idun_cicd_cli"
version = "0.1.0"
description = "IDUN CICD CLI"
authors = ["Thunderbee <PDLENMCOUN@pdl.internal.ericsson.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
requests = "^2.26.0"
PyYAML = "^6.0"
colorlog = "6.7.0"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "*"
pylint = "*"
flake8 = "*"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s][%(filename)s:%(funcName)s:%(lineno)s][%(asctime)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
norecursedirs = ["bob", "oss-common-ci", "oss-integration-ci"]